Fix and enable Helm installation tests and correct a few other Sonar bugs (#2939)
* Fix and enable Helm installation tests and correct a few other Sonar bugs