@@ -1,4 +1,4 @@
-<!-- Copyright (c) 2017, 2021, Oracle and/or its affiliates.
+<!-- Copyright (c) 2017, 2022, Oracle and/or its affiliates.
      Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.
 -->
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -133,7 +133,6 @@
                                 <include>**/*IT.java</include>
                                 <include>**/*AT.java</include>
                             </includes>
-                            <argLine>@{argLine} --add-opens java.base/java.time=ALL-UNNAMED</argLine>
                         </configuration>
                         <executions>
                             <execution>
